# flarecrawl

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/skills/flarecrawl-ops/: SKILL.md
docs/: FEATURE-EVALUATION.md  benchmark-report.md  feature-evaluation.md
src/flarecrawl/: __init__.py  cli.py  client.py  config.py  extract.py  negotiate.py
tests/: bench-log.tsv  bench-results-r3-final.json  bench-results-r3-js.json  bench-results-r3.json  bench.py  conftest.py  corpus-results.json  corpus.py  iterate-results.tsv  test_cli.py  test_client.py  test_extract.py  test_negotiate.py
